# D-N-N_HEALTH-CARE

./: CODE_OF_CONDUCT.md
Learning-Python-for-Computational-Biology/: Alignment.ipynb  First Neural Network for Computational Biology.ipynb
Learning-Python-for-Computational-Biology/MIT Deep Learning for Healthcare Tutorials/: tutorials_MIT.txt
Project 16 -- Skin-Cancer-Detection-CNN-Keras/: download_dataset_subset.py  get_dataset.py  more_datasets.txt
Project 16 -- Skin-Cancer-Detection-CNN-Keras/Data/: more_datasets.txt
Project 17 -- DeepHeart - Predicting CardioVascular Risk Factors /: README.md
Project 4 -- Deep Learning to Predict DNA Methylation/: __init__.py
Project 6 -- Deep Learning for Breast Cancer using TensorFlow/: cancer_train.py
Project 7 --  Melanoma Cancer Detection with Deep Learning, CNN using TensorFlow/: Inception.py
Project 9 -- Deep Learning RNN for Predicting  Glucose Concentration for Diabetes1 Patients/: 452_Project_Part_C.docx  FeedForwardNN.py  Outline.py  README.md  RecurrentNN.py  data_preprocessor_FFNN.py  data_preprocessor_RNN.py
Project21-DeepGlocautomousOpticNeuropathy/: init.py
Project22 --  DeepLearning Framework - BioMedical Named Entity Recognition copy/: README.md
Project22 --  DeepLearning Framework - BioMedical Named Entity Recognition/GM/: CMakeLists.txt  LSTMCRFMLLabeler.h  neuralLSTMML-pubvec300-BIES_drop0_notune_h100.sh  neuralLSTMML-senna50-BIES_drop0_notune_h100.sh
Project22 --  DeepLearning Framework - BioMedical Named Entity Recognition/GM/geneGold/: alt_eval.perl
datasets/: readme.md
(+194 files in other folders)
